feat: Implement AI-powered chatbox
Adds a new chatbox component integrated with Google GenAI to provide AI-driven customer support. Includes new type definitions for chat messages and updates translation files for chatbox UI elements in English, Spanish, and Arabic. Also updates import maps to include the Google GenAI library.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -56,5 +56,9 @@
     "humanity.schoolText": "تأسست في عام 1996 في شيراز من قبل مجموعة بزرگی، وتعتبر هذه المدرسة الثانوية شهادة على التزامنا بالتعليم وتمكين الجيل القادم.",
     "contact.title": "اتصل بنا",
     "contact.subtitle": "نهتم دائمًا بالتواصل مع الشركاء والعملاء في جميع أنحاء العالم.",
-    "footer.rights": "كل الحقوق محفوظة."
+    "footer.rights": "كل الحقوق محفوظة.",
+    "chatbox.title": "الدردشة معنا",
+    "chatbox.placeholder": "اكتب رسالة...",
+    "chatbox.initialMessage": "مرحباً! كيف يمكنني مساعدتك اليوم بخصوص مجموعة بزرگی؟",
+    "chatbox.typing": "يكتب..."
 }
