--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -56,5 +56,9 @@
     "humanity.schoolText": "Founded in 1996 in Shiraz by Bozorgi Group, this high school is a testament to our commitment to education and empowering the next generation.",
     "contact.title": "Contact Us",
     "contact.subtitle": "We are always interested in connecting with partners and clients worldwide.",
-    "footer.rights": "All rights reserved."
+    "footer.rights": "All rights reserved.",
+    "chatbox.title": "Chat with Us",
+    "chatbox.placeholder": "Type a message...",
+    "chatbox.initialMessage": "Hello! How can I help you today regarding Bozorgi Group?",
+    "chatbox.typing": "Typing..."
 }
