feat: Add location and social media links to footer
Introduces new keys for "Our Location" and "Follow Us" in the i18n files. The footer component is updated to display these new labels, providing users with direct links to the company's social media profiles and their physical location.

Additionally, the Chatbox component now resets its session when the language changes, ensuring a fresh conversation context for the user.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -57,6 +57,8 @@
     "contact.title": "اتصل بنا",
     "contact.subtitle": "نهتم دائمًا بالتواصل مع الشركاء والعملاء في جميع أنحاء العالم.",
     "footer.rights": "كل الحقوق محفوظة.",
+    "footer.locationTitle": "موقعنا",
+    "footer.followUs": "تابعنا",
     "chatbox.title": "الدردشة معنا",
     "chatbox.placeholder": "اكتب رسالة...",
     "chatbox.initialMessage": "مرحباً! كيف يمكنني مساعدتك اليوم بخصوص مجموعة بزرگی؟",
