--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -57,6 +57,8 @@
     "contact.title": "Contact Us",
     "contact.subtitle": "We are always interested in connecting with partners and clients worldwide.",
     "footer.rights": "All rights reserved.",
+    "footer.locationTitle": "Our Location",
+    "footer.followUs": "Follow Us",
     "chatbox.title": "Chat with Us",
     "chatbox.placeholder": "Type a message...",
     "chatbox.initialMessage": "Hello! How can I help you today regarding Bozorgi Group?",
