--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -57,6 +57,8 @@
     "contact.title": "Contáctenos",
     "contact.subtitle": "Siempre estamos interesados en conectar con socios y clientes en todo el mundo.",
     "footer.rights": "Todos los derechos reservados.",
+    "footer.locationTitle": "Nuestra Ubicación",
+    "footer.followUs": "Síganos",
     "chatbox.title": "Chatea con nosotros",
     "chatbox.placeholder": "Escribe un mensaje...",
     "chatbox.initialMessage": "¡Hola! ¿Cómo puedo ayudarte hoy con respecto a Bozorgi Group?",
