feat: Implement theme switching and dark mode
Integrates a `ThemeProvider` to manage application theme state. This enables users to switch between light and dark modes, enhancing accessibility and user experience. The application's background, text, and element colors are updated dynamically based on the selected theme. This also includes minor adjustments to styling to better support the new theming capabilities.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -62,5 +62,9 @@
     "chatbox.title": "الدردشة معنا",
     "chatbox.placeholder": "اكتب رسالة...",
     "chatbox.initialMessage": "مرحباً! كيف يمكنني مساعدتك اليوم بخصوص مجموعة بزرگی؟",
-    "chatbox.typing": "يكتب..."
+    "chatbox.typing": "يكتب...",
+    "theme.title": "المظهر",
+    "theme.light": "فاتح",
+    "theme.dark": "داكن",
+    "theme.auto": "تلقائي"
 }
