--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -62,5 +62,9 @@
     "chatbox.title": "Chatea con nosotros",
     "chatbox.placeholder": "Escribe un mensaje...",
     "chatbox.initialMessage": "¡Hola! ¿Cómo puedo ayudarte hoy con respecto a Bozorgi Group?",
-    "chatbox.typing": "Escribiendo..."
+    "chatbox.typing": "Escribiendo...",
+    "theme.title": "Tema",
+    "theme.light": "Claro",
+    "theme.dark": "Oscuro",
+    "theme.auto": "Automático"
 }
