feat: Add canned response to chatbox
Introduces a canned response message for the chatbox, providing users with an immediate acknowledgement of their message and setting expectations for a prompt follow-up. This enhances user experience by providing instant feedback.

Updates localization files for English, Spanish, and Arabic to include the new `chatbox.cannedResponse` key.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -62,6 +62,7 @@
     "chatbox.title": "الدردشة معنا",
     "chatbox.placeholder": "اكتب رسالة...",
     "chatbox.initialMessage": "مرحباً! كيف يمكنني مساعدتك اليوم بخصوص مجموعة بزرگی؟",
+    "chatbox.cannedResponse": "شكرا لرسالتك. سيتواصل معك أحد ممثلينا قريبًا.",
     "chatbox.typing": "يكتب...",
     "theme.title": "المظهر",
     "theme.light": "فاتح",
