--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -62,6 +62,7 @@
     "chatbox.title": "Chat with Us",
     "chatbox.placeholder": "Type a message...",
     "chatbox.initialMessage": "Hello! How can I help you today regarding Bozorgi Group?",
+    "chatbox.cannedResponse": "Thank you for your message. A representative will be with you shortly.",
     "chatbox.typing": "Typing...",
     "theme.title": "Theme",
     "theme.light": "Light",
