feat: Enhance accessibility and animations
Introduces several improvements:
- Implements reduced motion media query for better user experience.
- Adds `focus-visible` styles for improved keyboard navigation.
- Integrates `useIntersectionObserver` hook for scroll-triggered animations on About and Philosophy sections.
- Updates image paths and adds `aria-hidden` attributes where appropriate.
- Refines styling for focus indicators and icons.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -6,6 +6,7 @@
     "header.contact": "اتصل بنا",
     "hero.subtitle": "شريكك الأول في تجارة مواد البناء",
     "hero.motto": "تجارة بلا حدود",
+    "hero.scroll": "انتقل إلى قسم معلومات عنا",
     "about.title": "عن مجموعة بزرگی",
     "about.description": "منذ عام 1988، تعمل مجموعة بزرگی تحت شعار \"تجارة بلا حدود\". نحن شركة تجارية متخصصة في استيراد وتصدير وتوزيع مواد البناء في جميع أنحاء العالم.",
     "about.missionTitle": "مهمتنا",
@@ -64,6 +65,8 @@
     "chatbox.initialMessage": "مرحباً! كيف يمكنني مساعدتك اليوم بخصوص مجموعة بزرگی؟",
     "chatbox.cannedResponse": "شكرا لرسالتك. سيتواصل معك أحد ممثلينا قريبًا.",
     "chatbox.typing": "يكتب...",
+    "chatbox.send": "إرسال رسالة",
+    "chatbox.close": "إغلاق الدردشة",
     "theme.title": "المظهر",
     "theme.light": "فاتح",
     "theme.dark": "داكن",
