--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -6,6 +6,7 @@
     "header.contact": "Contact",
     "hero.subtitle": "Your Premier Partner in Building Materials Trading",
     "hero.motto": "Business Without Boundary",
+    "hero.scroll": "Scroll to About section",
     "about.title": "About Bozorgi Group",
     "about.description": "Since 1988, Bozorgi Group has operated under the motto \"Business Without Boundary.\" We are a trading company specializing in the import, export, and distribution of building materials worldwide.",
     "about.missionTitle": "Our Mission",
@@ -64,6 +65,8 @@
     "chatbox.initialMessage": "Hello! How can I help you today regarding Bozorgi Group?",
     "chatbox.cannedResponse": "Thank you for your message. A representative will be with you shortly.",
     "chatbox.typing": "Typing...",
+    "chatbox.send": "Send message",
+    "chatbox.close": "Close chat",
     "theme.title": "Theme",
     "theme.light": "Light",
     "theme.dark": "Dark",
