--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -6,6 +6,7 @@
     "header.contact": "Contacto",
     "hero.subtitle": "Su Socio Principal en el Comercio de Materiales de Construcción",
     "hero.motto": "Negocios Sin Fronteras",
+    "hero.scroll": "Desplácese a la sección Sobre nosotros",
     "about.title": "Sobre Bozorgi Group",
     "about.description": "Desde 1988, Bozorgi Group opera bajo el lema \"Negocios Sin Fronteras\". Somos una empresa comercial especializada en la importación, exportación y distribución de materiales de construcción en todo el mundo.",
     "about.missionTitle": "Nuestra Misión",
@@ -64,6 +65,8 @@
     "chatbox.initialMessage": "¡Hola! ¿Cómo puedo ayudarte hoy con respecto a Bozorgi Group?",
     "chatbox.cannedResponse": "Gracias por tu mensaje. Un representante estará contigo en breve.",
     "chatbox.typing": "Escribiendo...",
+    "chatbox.send": "Enviar mensaje",
+    "chatbox.close": "Cerrar chat",
     "theme.title": "Tema",
     "theme.light": "Claro",
     "theme.dark": "Oscuro",
