feat: Add Why Choose Us section and update translations
Introduces a new "Why Choose Us" section to the application, highlighting the company's unique selling propositions. Also, refines existing translations for accuracy and impact across hero and about sections.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -4,33 +4,33 @@
     "header.history": "التاريخ",
     "header.humanity": "الإنسانية أولاً",
     "header.contact": "اتصل بنا",
-    "hero.subtitle": "شريكك الأول في تجارة مواد البناء",
+    "hero.subtitle": "خبراء عالميون في توريد الأخشاب والاستشارات الاستراتيجية",
     "hero.motto": "تجارة بلا حدود",
-    "hero.scroll": "انتقل إلى قسم معلومات عنا",
+    "hero.scroll": "اكتشف المزيد",
     "about.title": "عن مجموعة بزرگی",
-    "about.description": "منذ عام 1988، تعمل مجموعة بزرگی تحت شعار \"تجارة بلا حدود\". نحن شركة تجارية متخصصة في استيراد وتصدير وتوزيع مواد البناء في جميع أنحاء العالم.",
+    "about.description": "منذ عام 1988، تعمل مجموعة بزرگی تحت شعار \"تجارة بلا حدود\". نحن شركة تجارية رائدة متخصصة في الاستيراد والتصدير والتوزيع الاستراتيجي لمواد البناء عالية الجودة في جميع أنحاء العالم.",
     "about.missionTitle": "مهمتنا",
-    "about.missionText": "توريد مواد البناء بأفضل الخدمات والأسعار، وتوسيع أعمالنا وانتشارنا الجغرافي باستخدام أنظمة إدارة دولية ذات خبرة ومواكبة للعصر.",
+    "about.missionText": "توريد مواد بناء فائقة الجودة بخدمة لا مثيل لها وأسعار تنافسية، وتوسيع بصمتنا العالمية من خلال أنظمة إدارة دولية متقدمة.",
     "about.visionTitle": "رؤيتنا",
-    "about.visionText": "أن نكون شركة رائدة في مجال الأعمال وتجارة مواد البناء، مع الحفاظ على قيمنا الأساسية المتمثلة في الصدق والشفافية على الصعيدين الوطني والدولي.",
-    "about.valuesTitle": "قيم الشركة",
-    "about.valuesText": "الصدق، الولاء، المجاملة، الوضوح، التواضع، والتعلم. نركز على الإنسانية، ومنفتحون على النقد، ونعطي الأولوية للمصالح المتبادلة لجميع المستفيدين.",
+    "about.visionText": "قيادة سوق مواد البناء العالمي من خلال الحفاظ على قيمنا الأساسية المتمثلة في الصدق والشفافية والتميز التشغيلي.",
+    "about.valuesTitle": "القيم الأساسية",
+    "about.valuesText": "الصدق، الولاء، الوضوح، والتعلم المستمر. نحن نعطي الأولوية للإنسانية والمنفعة المتبادلة، ونعزز العلاقات الشفافة مع جميع شركائنا.",
     "products.title": "منتجاتنا",
-    "products.subtitle": "أخشاب هندسية وطبيعية عالية الجودة لجميع احتياجات البناء الخاصة بك.",
+    "products.subtitle": "حلول الأخشاب الهندسية والطبيعية المتميزة والمصممة لتميز البناء.",
     "products.mdf.name": "MDF",
-    "products.mdf.description": "لوح ليفي متوسط الكثافة، وهو منتج خشبي هندسي مصنوع من بقايا الأخشاب الصلبة أو اللينة المتحللة.",
+    "products.mdf.description": "خشب هندسي متعدد الاستخدامات يوفر سطحًا أملسًا مثاليًا للطلاء والتصنيع الدقيق والأثاث الراقي.",
     "products.hdf.name": "HDF",
-    "products.hdf.description": "لوح ليفي عالي الكثافة (Hardboard) هو منتج خشبي هندسي، يُقدر بكثافته وقوته.",
+    "products.hdf.description": "لوح ليفي عالي الكثافة يوفر متانة وقوة فائقة للأرضيات والتطبيقات الهيكلية الصعبة.",
     "products.plywood.name": "الخشب الرقائقي",
-    "products.plywood.description": "مصنوع من لدائن حرارية، وأصباغ مقاومة للأشعة فوق البنفسجية، ومركبات رغوية، غالبًا من مواد معاد تدويرها.",
+    "products.plywood.description": "خشب هندسي قوي ومستقر ومقاوم للصدمات، مثالي للسلامة الهيكلية في البناء والتصميم.",
     "products.hardwood.name": "الخشب الصلب",
-    "products.hardwood.description": "خشب من الأشجار ثنائية الفلقة، يوجد عادة في الغابات المعتدلة والاستوائية عريضة الأوراق. معروف بمتانته.",
+    "products.hardwood.description": "أخشاب طبيعية فاخرة يتم الحصول عليها من الغابات عريضة الأوراق، وتشتهر بمتانتها الاستثنائية وحبيباتها الجمالية.",
     "products.chipboard.name": "لوح خشبي مضغوط",
-    "products.chipboard.description": "ألواح صلبة من رقائق الخشب المضغوطة والراتنج، غالبًا ما تكون مطلية أو مكسوة بالقشرة، وتستخدم في الأثاث والمباني.",
+    "products.chipboard.description": "ألواح فعالة من حيث التكلفة ومتعددة الاستخدامات تستخدم على نطاق واسع في تصنيع الأثاث والخزائن والديكورات الداخلية للمباني.",
     "products.hpl.name": "HPL",
-    "products.hpl.description": "منتجات صفائح الضغط العالي تستخدم في المقام الأول كمواد سطحية للأثاث أو ألواح الجدران.",
+    "products.hpl.description": "صفائح ضغط عالي متينة مصممة للأسطح المقاومة للخدش والتشطيبات المعمارية الحديثة.",
     "products.veneer.name": "قشرة خشبية طبيعية",
-    "products.veneer.description": "شرائح رقيقة من الخشب، عادة ما تكون أرق من 3 مم، يتم لصقها على ألواح أساسية للأبواب والخزائن والأثاث.",
+    "products.veneer.description": "شرائح خشبية طبيعية رائعة تضفي لمسة خشبية أصلية ومتميزة على التصميمات الداخلية والأبواب والخزائن.",
     "history.title": "تراثنا: شجرة العائلة",
     "history.subtitle": "رحلة عبر أجيال من القيادة والابتكار في صناعة الأخشاب ومواد البناء.",
     "family.gen5.name": "بزرك بزرگی",
@@ -56,7 +56,7 @@
     "humanity.schoolTitle": "مدرسة محمد علي بزرگی الثانوية",
     "humanity.schoolText": "تأسست في عام 1996 في شيراز من قبل مجموعة بزرگی، وتعتبر هذه المدرسة الثانوية شهادة على التزامنا بالتعليم وتمكين الجيل القادم.",
     "contact.title": "اتصل بنا",
-    "contact.subtitle": "نهتم دائمًا بالتواصل مع الشركاء والعملاء في جميع أنحاء العالم.",
+    "contact.subtitle": "هل أنت مستعد لتحسين سلسلة التوريد الخاصة بك؟ تواصل مع فريقنا العالمي اليوم.",
     "footer.rights": "كل الحقوق محفوظة.",
     "footer.locationTitle": "موقعنا",
     "footer.followUs": "تابعنا",
@@ -70,5 +70,15 @@
     "theme.title": "المظهر",
     "theme.light": "فاتح",
     "theme.dark": "داكن",
-    "theme.auto": "تلقائي"
+    "theme.auto": "تلقائي",
+    "whyus.title": "لماذا تختار مجموعة بزرگی — خبراء استشارات الأخشاب",
+    "whyus.subtitle": "في عالم الأخشاب، الخبرة هي الأهم — وقد قمنا ببناء خبرتنا من خلال سنوات من العمل الحقيقي والعملي في الأسواق العالمية.",
+    "whyus.desc1": "مجموعة بزرگی هي شركة متخصصة في استشارات وتوريد الأخشاب، تقدم خبرة عميقة في الأخشاب والمواد القائمة على الخشب — من التوريد والاستيراد إلى اختيار المواد المناسبة للمشاريع الصناعية والمعمارية.",
+    "whyus.desc2": "تستند خدماتنا الاستشارية إلى واقع السوق والخبرة الميدانية المثبتة — وليس النظرية.",
+    "whyus.listTitle": "نحن نساعدك في:",
+    "whyus.list1": "اختيار نوع الخشب المناسب بناءً على احتياجاتك وميزانيتك وهدفك.",
+    "whyus.list2": "تجنب الأخطاء المكلفة في الشراء أو تنفيذ المشروع.",
+    "whyus.list3": "الوصول إلى موردين عالميين موثوقين ومواد خام عالية الجودة.",
+    "whyus.list4": "اتخاذ قرارات فنية وتجارية واثقة بتوجيه مهني.",
+    "whyus.conclusion": "بفضل خبرتنا الطويلة في إسبانيا والشرق الأوسط وأوروبا، نجلب رؤية واسعة وشبكة قوية لكل مشروع. في مجموعة بزرگی، لسنا مجرد موردين — نحن مستشارو الأخشاب الموثوق بهم وشركاؤك الاستراتيجيون في كل خطوة من خطوات اتخاذ القرار."
 }
