--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -4,33 +4,33 @@
     "header.history": "History",
     "header.humanity": "Humanity First",
     "header.contact": "Contact",
-    "hero.subtitle": "Your Premier Partner in Building Materials Trading",
-    "hero.motto": "Business Without Boundary",
-    "hero.scroll": "Scroll to About section",
+    "hero.subtitle": "Global Experts in Wood Sourcing & Strategic Consulting",
+    "hero.motto": "Business Without Boundaries",
+    "hero.scroll": "Discover More",
     "about.title": "About Bozorgi Group",
-    "about.description": "Since 1988, Bozorgi Group has operated under the motto \"Business Without Boundary.\" We are a trading company specializing in the import, export, and distribution of building materials worldwide.",
+    "about.description": "Since 1988, Bozorgi Group has operated under the motto \"Business Without Boundaries.\" We are a premier trading house specializing in the global import, export, and strategic distribution of high-quality building materials.",
     "about.missionTitle": "Our Mission",
-    "about.missionText": "To supply building materials with the best services and prices, expanding our business and geographical reach using experienced, up-to-date international management systems.",
+    "about.missionText": "To supply superior building materials with unmatched service and competitive pricing, expanding our global footprint through advanced international management systems.",
     "about.visionTitle": "Our Vision",
-    "about.visionText": "To be a leading business and trading company in building materials, maintaining our core values of honesty and transparency on both national and international fronts.",
-    "about.valuesTitle": "Company Values",
-    "about.valuesText": "Honesty, loyalty, courtesy, clarity, humility, and learning. We focus on humanity, are open to criticism, and prioritize the mutual interests of all beneficiaries.",
+    "about.visionText": "To lead the global building materials market by upholding our core values of honesty, transparency, and operational excellence on every front.",
+    "about.valuesTitle": "Core Values",
+    "about.valuesText": "Honesty, loyalty, clarity, and continuous learning. We prioritize humanity and mutual benefit, fostering transparent relationships with all our partners.",
     "products.title": "Our Products",
-    "products.subtitle": "High-quality engineered and natural wood for all your construction needs.",
+    "products.subtitle": "Premium engineered and natural wood solutions tailored for construction excellence.",
     "products.mdf.name": "MDF",
-    "products.mdf.description": "Medium-density fibreboard, an engineered wood product made from broken down hardwood or softwood residuals.",
+    "products.mdf.description": "Versatile engineered wood offering a smooth surface ideal for painting, precision machining, and high-end furniture.",
     "products.hdf.name": "HDF",
-    "products.hdf.description": "High-density fiberboard (Hardboard) is an engineered wood product, valued for its density and strength.",
+    "products.hdf.description": "High-density fiberboard delivering superior durability and strength for flooring and demanding structural applications.",
     "products.plywood.name": "Plywood",
-    "products.plywood.description": "Made from thermoformed plastics, UV-inhibited pigments, and foaming compounds, often from recycled materials.",
+    "products.plywood.description": "Strong, stable, and impact-resistant engineered wood perfect for structural integrity in construction and design.",
     "products.hardwood.name": "Hardwood",
-    "products.hardwood.description": "Wood from dicot trees, usually found in broad-leaved temperate and tropical forests. Known for its durability.",
+    "products.hardwood.description": "Premium natural timber sourced from broad-leaved forests, renowned for its exceptional durability and aesthetic grain.",
     "products.chipboard.name": "Chipboard",
-    "products.chipboard.description": "Rigid sheets from compressed wood chips and resin, often coated or veneered, used in furniture and buildings.",
+    "products.chipboard.description": "Cost-effective and versatile sheets widely used in furniture manufacturing, cabinetry, and building interiors.",
     "products.hpl.name": "HPL",
-    "products.hpl.description": "High-Pressure Laminate products primarily used as furniture surface materials or wall paneling.",
+    "products.hpl.description": "Durable High-Pressure Laminates designed for resilient, scratch-resistant surfaces and modern architectural finishes.",
     "products.veneer.name": "Natural Veneer",
-    "products.veneer.description": "Thin slices of wood, usually thinner than 3 mm, that are glued onto core panels for doors, cabinets, and furniture.",
+    "products.veneer.description": "Exquisite natural wood slices that add a premium, authentic wood finish to interiors, doors, and cabinetry.",
     "history.title": "Our Legacy: A Family Tree",
     "history.subtitle": "A journey through generations of leadership and innovation in the timber and building materials industry.",
     "family.gen5.name": "Bozorg Bozorgi",
@@ -56,7 +56,7 @@
     "humanity.schoolTitle": "Mohammad Ali Bozorgi Highschool",
     "humanity.schoolText": "Founded in 1996 in Shiraz by Bozorgi Group, this high school is a testament to our commitment to education and empowering the next generation.",
     "contact.title": "Contact Us",
-    "contact.subtitle": "We are always interested in connecting with partners and clients worldwide.",
+    "contact.subtitle": "Ready to optimize your supply chain? Connect with our global team today.",
     "footer.rights": "All rights reserved.",
     "footer.locationTitle": "Our Location",
     "footer.followUs": "Follow Us",
@@ -70,5 +70,15 @@
     "theme.title": "Theme",
     "theme.light": "Light",
     "theme.dark": "Dark",
-    "theme.auto": "Auto"
+    "theme.auto": "Auto",
+    "whyus.title": "Why Choose Bozorgi Group — Wood Consulting Experts",
+    "whyus.subtitle": "In the world of wood, experience matters most — and we’ve built ours through years of real, hands-on work in global markets.",
+    "whyus.desc1": "Bozorgi Group is a specialized wood consulting and sourcing firm, offering deep expertise in wood and wood-based materials — from sourcing and importing to selecting the right materials for industrial and architectural projects.",
+    "whyus.desc2": "Our consulting services are grounded in market reality and proven field experience — not theory.",
+    "whyus.listTitle": "We help you:",
+    "whyus.list1": "Choose the right type of wood based on your needs, budget, and purpose.",
+    "whyus.list2": "Avoid costly mistakes in purchasing or project execution.",
+    "whyus.list3": "Gain access to trusted global suppliers and high-quality raw materials.",
+    "whyus.list4": "Make confident technical and business decisions with professional guidance.",
+    "whyus.conclusion": "With long-term experience across Spain, the Middle East, and Europe, we bring a broad vision and solid network to every project. At Bozorgi Group, we are not just suppliers — we are your trusted wood consultants and strategic partners in every step of the decision-making process."
 }
