--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -4,33 +4,33 @@
     "header.history": "Historia",
     "header.humanity": "Humanidad Primero",
     "header.contact": "Contacto",
-    "hero.subtitle": "Su Socio Principal en el Comercio de Materiales de Construcción",
+    "hero.subtitle": "Expertos Globales en Abastecimiento de Madera y Consultoría Estratégica",
     "hero.motto": "Negocios Sin Fronteras",
-    "hero.scroll": "Desplácese a la sección Sobre nosotros",
+    "hero.scroll": "Descubra Más",
     "about.title": "Sobre Bozorgi Group",
-    "about.description": "Desde 1988, Bozorgi Group opera bajo el lema \"Negocios Sin Fronteras\". Somos una empresa comercial especializada en la importación, exportación y distribución de materiales de construcción en todo el mundo.",
+    "about.description": "Desde 1988, Bozorgi Group opera bajo el lema \"Negocios Sin Fronteras\". Somos una casa comercial líder especializada en la importación, exportación y distribución estratégica de materiales de construcción de alta calidad.",
     "about.missionTitle": "Nuestra Misión",
-    "about.missionText": "Suministrar materiales de construcción con los mejores servicios y precios, expandiendo nuestro negocio y alcance geográfico utilizando sistemas de gestión internacional experimentados y actualizados.",
+    "about.missionText": "Suministrar materiales de construcción superiores con un servicio inigualable y precios competitivos, expandiendo nuestra huella global a través de sistemas de gestión internacional avanzados.",
     "about.visionTitle": "Nuestra Visión",
-    "about.visionText": "Ser una empresa líder en negocios y comercio de materiales de construcción, manteniendo nuestros valores fundamentales de honestidad y transparencia tanto a nivel nacional como internacional.",
-    "about.valuesTitle": "Valores de la Empresa",
-    "about.valuesText": "Honestidad, lealtad, cortesía, claridad, humildad y aprendizaje. Nos enfocamos en la humanidad, estamos abiertos a la crítica y priorizamos los intereses mutuos de todos los beneficiarios.",
+    "about.visionText": "Liderar el mercado global de materiales de construcción manteniendo nuestros valores fundamentales de honestidad, transparencia y excelencia operativa.",
+    "about.valuesTitle": "Valores Fundamentales",
+    "about.valuesText": "Honestidad, lealtad, claridad y aprendizaje continuo. Priorizamos la humanidad y el beneficio mutuo, fomentando relaciones transparentes con todos nuestros socios.",
     "products.title": "Nuestros Productos",
-    "products.subtitle": "Madera de ingeniería y natural de alta calidad para todas sus necesidades de construcción.",
+    "products.subtitle": "Soluciones de madera natural y de ingeniería de primera calidad adaptadas para la excelencia en la construcción.",
     "products.mdf.name": "MDF",
-    "products.mdf.description": "Tablero de fibra de densidad media, un producto de madera de ingeniería hecho de residuos de madera dura o blanda descompuestos.",
+    "products.mdf.description": "Madera de ingeniería versátil que ofrece una superficie lisa ideal para pintura, mecanizado de precisión y muebles de alta gama.",
     "products.hdf.name": "HDF",
-    "products.hdf.description": "Tablero de fibra de alta densidad (Hardboard) es un producto de madera de ingeniería, valorado por su densidad y resistencia.",
+    "products.hdf.description": "Tablero de fibra de alta densidad que ofrece una durabilidad y resistencia superiores para suelos y aplicaciones estructurales exigentes.",
     "products.plywood.name": "Contrachapado",
-    "products.plywood.description": "Hecho de plásticos termoformados, pigmentos con inhibición de rayos UV y compuestos espumantes, a menudo de materiales reciclados.",
+    "products.plywood.description": "Madera de ingeniería fuerte, estable y resistente a impactos, perfecta para la integridad estructural en construcción y diseño.",
     "products.hardwood.name": "Madera Dura",
-    "products.hardwood.description": "Madera de árboles dicotiledóneos, que se encuentra generalmente en bosques templados y tropicales de hoja ancha. Conocida por su durabilidad.",
+    "products.hardwood.description": "Madera natural premium de bosques de hoja ancha, reconocida por su durabilidad excepcional y grano estético.",
     "products.chipboard.name": "Aglomerado",
-    "products.chipboard.description": "Láminas rígidas de virutas de madera comprimida y resina, a menudo recubiertas o enchapadas, utilizadas en muebles y edificios.",
+    "products.chipboard.description": "Láminas rentables y versátiles ampliamente utilizadas en la fabricación de muebles, gabinetes e interiores de edificios.",
     "products.hpl.name": "HPL",
-    "products.hpl.description": "Productos de laminado de alta presión utilizados principalmente como materiales de superficie de muebles o revestimiento de paredes.",
+    "products.hpl.description": "Laminados de alta presión duraderos diseñados para superficies resistentes a arañazos y acabados arquitectónicos modernos.",
     "products.veneer.name": "Chapa Natural",
-    "products.veneer.description": "Finas láminas de madera, generalmente de menos de 3 mm, que se pegan sobre paneles centrales para puertas, gabinetes y muebles.",
+    "products.veneer.description": "Exquisitas láminas de madera natural que añaden un acabado de madera auténtico y premium a interiores, puertas y gabinetes.",
     "history.title": "Nuestro Legado: Un Árbol Genealógico",
     "history.subtitle": "Un viaje a través de generaciones de liderazgo e innovación en la industria de la madera y los materiales de construcción.",
     "family.gen5.name": "Bozorg Bozorgi",
@@ -56,7 +56,7 @@
     "humanity.schoolTitle": "Escuela Secundaria Mohammad Ali Bozorgi",
     "humanity.schoolText": "Fundada en 1996 en Shiraz por Bozorgi Group, esta escuela secundaria es un testimonio de nuestro compromiso con la educación y el empoderamiento de la próxima generación.",
     "contact.title": "Contáctenos",
-    "contact.subtitle": "Siempre estamos interesados en conectar con socios y clientes en todo el mundo.",
+    "contact.subtitle": "¿Listo para optimizar su cadena de suministro? Conecte con nuestro equipo global hoy.",
     "footer.rights": "Todos los derechos reservados.",
     "footer.locationTitle": "Nuestra Ubicación",
     "footer.followUs": "Síganos",
@@ -70,5 +70,15 @@
     "theme.title": "Tema",
     "theme.light": "Claro",
     "theme.dark": "Oscuro",
-    "theme.auto": "Automático"
+    "theme.auto": "Automático",
+    "whyus.title": "Por qué elegir Bozorgi Group — Expertos en Consultoría de Madera",
+    "whyus.subtitle": "En el mundo de la madera, la experiencia es lo más importante — y hemos construido la nuestra a través de años de trabajo real y práctico en los mercados globales.",
+    "whyus.desc1": "Bozorgi Group es una firma especializada en consultoría y abastecimiento de madera, que ofrece una profunda experiencia en madera y materiales a base de madera — desde el abastecimiento y la importación hasta la selección de los materiales adecuados para proyectos industriales y arquitectónicos.",
+    "whyus.desc2": "Nuestros servicios de consultoría se basan en la realidad del mercado y en experiencia de campo probada — no en teoría.",
+    "whyus.listTitle": "Le ayudamos a:",
+    "whyus.list1": "Elegir el tipo de madera adecuado según sus necesidades, presupuesto y propósito.",
+    "whyus.list2": "Evitar errores costosos en la compra o ejecución de proyectos.",
+    "whyus.list3": "Obtener acceso a proveedores globales de confianza y materias primas de alta calidad.",
+    "whyus.list4": "Tomar decisiones técnicas y comerciales con confianza y guía profesional.",
+    "whyus.conclusion": "Con experiencia a largo plazo en España, Oriente Medio y Europa, aportamos una visión amplia y una red sólida a cada proyecto. En Bozorgi Group, no somos solo proveedores — somos sus consultores de confianza y socios estratégicos en cada paso del proceso de toma de decisiones."
 }
